Mobile fix and Chrome colour on mobile

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ option {
     color: black;
 }
 
-input:focus, select:focus {
+input:focus,input:hover, select:focus,select:hover {
     -webkit-box-shadow: 0 5px 30px 0 rgba(0,0,0,0.1);
     -moz-box-shadow: 0 5px 30px 0 rgba(0,0,0,0.1);
     box-shadow: 0 5px 30px 0 rgba(0,0,0,0.1);
@@ -122,7 +122,8 @@ label {
 
 @media screen and (max-width:480px) {
     input,
-select {
+select, .submit {
     width: 90vw;
+    min-width: 90vw;
 }
 }
